--- a/index.html
+++ b/index.html
@@ -21,10 +21,7 @@
             <td id="verde" rowspan="3" colspan="2"> <img class="img2" src="image 2.png" alt=""> </td>
             <td rowspan="3" id="azul-1">
                 <p class="p">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ut interdum enim. Sed
-tincidunt est eget tortor porttitor elementum. Curabitur tempor placerat nisi, eu dictum diam
-rhoncus a. In nec diam in sapien dapibus molestie. Etiam vitae ex placerat, tincidunt mi in,
-iaculis urna. In bibendum auctor neque sed rhoncus. Cras massa ligula, tristique at lectus nec,
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ut interdum enim.
 
                 </p>
             </td>
